# Rust-Crash-Course

./: README.md
Chapter 17/hello-wasm/: Cargo.toml
Chapter 17/wasm-login/: Cargo.toml
Chapter01/hello_world/: main.rs
Chapter01/hello_world_cargo/: Cargo.toml
Chapter02/data-types/: Cargo.toml
Chapter02/functions/: Cargo.toml
Chapter02/if-else/: Cargo.toml
Chapter02/if-else-if/: Cargo.toml
Chapter02/loops/: Cargo.toml
Chapter02/variables/: Cargo.toml
Chapter03/ownership_1/: Cargo.toml
Chapter03/ownership_2/: Cargo.toml
Chapter03/ownership_3/: Cargo.toml
Chapter03/ownership_4/: Cargo.toml
Chapter03/ownership_5/: Cargo.toml
Chapter03/ownership_6/: Cargo.toml
Chapter03/references_1/: Cargo.toml
Chapter03/references_2/: Cargo.toml
Chapter03/references_3/: Cargo.toml
Chapter03/slice_1/: Cargo.toml
Chapter03/slice_2/: Cargo.toml
Chapter04/enums_1/: Cargo.toml
Chapter04/enums_2/: Cargo.toml
Chapter04/enums_3/: Cargo.toml
Chapter04/hashmap_1/: Cargo.toml
Chapter04/hashmap_2/: Cargo.toml
Chapter04/hashmap_3/: Cargo.toml
Chapter04/hashmap_4/: Cargo.toml
Chapter04/methods_1/: Cargo.toml
Chapter04/methods_2/: Cargo.toml
Chapter04/string_1/: Cargo.toml
Chapter04/string_2/: Cargo.toml
Chapter04/string_3/: Cargo.toml
Chapter04/string_4/: Cargo.toml
Chapter04/string_5/: Cargo.toml
Chapter04/string_6/: Cargo.toml
Chapter04/string_7/: Cargo.toml
Chapter04/vector_1/: Cargo.toml
Chapter04/vector_2/: Cargo.toml
Chapter05/binary-crate/: Cargo.toml
Chapter14/calculator/: Cargo.toml
Chapter14/calculator/src/: main.rs
(+153 files in other folders)
